--- a/public/ueditor/themes/default/dialogbase.css
+++ b/public/ueditor/themes/default/dialogbase.css
@@ -112,13 +112,13 @@ a.button:hover {
 }
 
 body.view table{
-	border-top: 1px solid #a3ddd1!important;
-    border-left: 1px solid #a3ddd1!important;
+	border-top: 1px solid #f1f3f9!important;
+    border-left: 1px solid #f1f3f9!important;
     background: none;
 }
 body.view table tr td{
-	border-bottom: 1px solid #a3ddd1!important;
-	border-right: 1px solid #a3ddd1!important;
+	border-bottom: 1px solid #f1f3f9!important;
+	border-right: 1px solid #f1f3f9!important;
 	padding: 3px 10px!important;
 }
 body.view table tr td,body.view table tr th{
