--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -9,6 +9,9 @@ $yellow:#FEC171;
 $panGreen: #1a6fdf;
 $border: #dfe4ed;
 $primaryBorder: #a3ddd1;
+// sidebtn
+$sidebtn:#f5f7fa;
+$sidebtnHover:#dae6ec;
 // sidebar
 $menuText:#bfcbd9;
 $menuActiveText:#2e84f6;
