--- a/src/styles/-mixin.scss
+++ b/src/styles/-mixin.scss
@@ -36,7 +36,7 @@
     &:before,
     &:after {
       content: "";
-      display: table;
+      display: block;
     }
     &:after {
       clear: both;
