--- a/src/styles/Article.scss
+++ b/src/styles/Article.scss
@@ -1,20 +1,68 @@
 ﻿.ArticleMain{
-    &.mobile{
-        .el-card__header{
-            padding:0px;
-        }
-    }
     &.box-card .el-card__body{
         background:none;
     }
-    .scroll-panel.ArticleMainTop{
+    .ArticleMainTop{
       padding:0px;
       .card-header{
-        background:#fff;}
+        border-radius: 8px;
+        background:#fff;
+      }
+    }
+}
+.ArticleSearchScreen{                
+    display: flex;
+    flex-direction: row;
+    background: none!important;
+    &:before{display: none;}
+    .ArticleSearch{
+        flex:1;
+        &:before{display: none;}
+        .article-search.el-input--medium{
+            font-size: 12px;
+            background-color: #474a52;
+            border-radius: 16px;
+            .el-input__inner{                            
+                height: 32px;
+                line-height: 32px;
+                padding: 0 15px;
+                font-size: 14px;
+                background: transparent;
+                border: none;
+                color:#ddd;
+            }
+        }
+        .article-search .el-input-group__append{                    
+            padding: 0 10px;
+            background-color: transparent;
+            border: none;
+            .el-button.el-button--medium{        
+                font-size: 0;
+                line-height: 0;
+                padding: 0 20px;
+                vertical-align: top;
+                .search-icon{                            
+                    height: 32px;
+                    line-height: 32px;
+                    font-size: 20px;
+                    color: #cccccc;
+                }
+            }
+        }
+    }
+    .WebsiteListScreen{
+      margin-left: 35px;
+      color: #1f2d3d;
+      font-size: 13px;
+      line-height: 22px;
+      display: inline-block;
+      background: #fff;
+      padding: 5px 10px;
+      cursor: pointer;
+      border-radius: 4px;
     }
 }
 .ArticleOne{
-    background:#fff;
     padding: 10px 15px;
     .txt-font.border-cell{
         width:96px!important;
@@ -32,80 +80,9 @@
             text-align:center;
         }
     }
-    &.mobile{
-        position:relative;
-        z-index:100;
-        .txt-font.border-cell{
-            width:100%!important;
-            padding:0px!important;
-            span{
-                border:0px;
-                border-left:1px solid #dcdfe6;
-                width:100%;
-                border-radius:0px;
-                padding-top:5px;
-                padding-bottom:5px;
-                height:42px;
-            }
-        }      
-        .border-row{
-            float:left;
-            width:25%;
-            cursor: pointer;
-            .flex-content{
-                display:none;
-            }
-            &:first-child{
-                .txt-font.border-cell{
-                    span{border-left:0px;}
-                }
-            }
-            &.active{
-                .txt-font.border-cell{
-                    color:#fff;
-                    span{
-                        border:0px;
-                        width:100%;
-                        background:#136add!important;
-                        color:#fff;
-                    }
-                } 
-                .flex-content{
-                    display:block;
-                    position:absolute;
-                    top:42px;
-                    background:#136add;
-                    padding:10px 15px 15px 15px;
-                    left:0px;
-                    right:0px;
-                    .tag-panel{
-                        .el-button{
-                            margin-top:5px!important;
-                            margin-left:0px!important;
-                            margin-right:5px!important;
-                        }
-                    }
-                    .el-button--primary.is-plain{
-                        color:#4c4c4c;
-                        background:#fff;
-                        &:active {
-                            border-color:#fff!important;
-                            color:#FFFFFF!important;
-                            background:#136add!important;
-                        }                        
-                        &.is-active{
-                            border:1px solid #fff!important;
-                            background:#136add!important;
-                        }
-                    }
-                }  
-            }
-        }
-    }
 }
 .ArticleTwo{
     padding:5px 15px 15px 15px;
-    background:#fff;
     &.post-tag{
         border-top:1px solid #eaeef0;
         padding-top:5px;
@@ -159,17 +136,6 @@
                 }
             }
         }
-        &.mobile{
-            margin-top:0px;
-            padding:10px 15px;
-            .flex-wrap{
-              .txt-font{
-                padding:5px 10px 5px 0px;
-                text-align:center;
-                width:85px;
-              }
-            }
-          }
     }
 }
 .ArticleThree{
@@ -281,11 +247,19 @@
     overflow:hidden;
     tr{
         td{
-            padding:10px 10px 5px 10px;
+            padding:5px 10px;
             vertical-align:middle;
             vertical-align:top;
             .el-input__inner{
                 padding-left:10px;
+            }
+            .el-input,.el-textarea{
+                margin-top: 5px;
+                margin-bottom: 5px;
+            }
+            .item-form-panel{
+                margin-top:0px;
+                margin-bottom:0px;
             }
             .ArticleFourTit{
                 .title-color{
@@ -328,6 +302,7 @@
                 .other-td{
                     float:left;
                     padding-bottom:5px;
+                    padding-top:5px;
                     strong{
                         float:left;
                         display:inline-block;
@@ -342,6 +317,10 @@
                     .item-form-panel{
                         float:left;
                         margin:0px;
+                        .el-input{
+                            margin-top:0px;
+                            margin-bottom: 0px;
+                        }
                     }
                 }
             }
@@ -375,9 +354,10 @@
         padding:3% 4%;
         overflow-x:hidden;
         overflow-y:scroll;
+        border-radius:8px;
         &::-webkit-scrollbar {width:4px;height:1px;}
-        &::-webkit-scrollbar-thumb {box-shadow:inset 0 0 1px #f3f3f3;background:#9b9b9b;}
-        &::-webkit-scrollbar-track {background:#fff;}
+        &::-webkit-scrollbar-thumb {box-shadow:inset 0 0 1px #f3f3f3;background:#9b9b9b;border-radius:8px;}
+        &::-webkit-scrollbar-track {background:rgba(255,255,255,0);}
         .ArticleSixFlTop{
             h1{
                 clear:both;
@@ -450,7 +430,7 @@
         background:#fff!important;
         padding:20px;
         margin:0!important;
-        border-radius:8px;
+        border-radius:8px!important;
         .el-card__body{
             height: 100%;
         }
