--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,6 +18,7 @@
 @import './-enCnProduct.scss';
 @import './Article.scss';
 @import './Chinaphone.scss';
+@import '-Enphone.scss';
 .page-root{
   position:absolute;
   left:0;
@@ -121,6 +122,7 @@
     }
   }
 }
+.el-table__placeholder{display:none!important;}
 .pagination-panel{
   overflow:hidden;
   &.top-page{
@@ -323,8 +325,8 @@
         border-color:#f1f3f6!important;
         border-radius:2px;
         margin-right:6px;
-        margin-bottom:6px;
-        margin-top:0px;
+        margin-bottom:5px;
+        margin-top:5px;
         margin-left:0px;
         padding:3px 15px;
         line-height:24px;
@@ -344,8 +346,8 @@
   .el-checkbox{
       border-color:#e6e6e6 !important;
       border-radius:2px!important;
-      margin-right:6px!important;
-      margin-bottom:6px!important;
+      margin-right:0px!important;
+      margin-bottom:0px!important;
       margin-top:0px!important;
       margin-left:0px!important;
       padding:5px 15px 5px 10px!important;
